--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title> Guitartronics</title>
+	<title>Devman's World </title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 
 <!-- -->  
 
@@ -43,7 +43,7 @@
 <body>
 
  <header>
- <div class="d-flex p-2"> <h3>calidad & precisión</h3></div>
+ <div class="d-flex p-2"> <h3>I'm leo, from chile </h3></div>
   
   </header>
 
@@ -55,19 +55,19 @@
  
 
   <div class="container">
-  <img src="guitartronics001.png" class="img-fluid" alt="Responsive image">
+  <img src="canvas.png" class="img-fluid" alt="Responsive image">
 
    
 
 
 
-  <div class="d-flex p-2"> <h3>servicios</h3></div>
+  <div class="d-flex p-2"> <h3>what I do</h3></div>
   <div class="row">
     <div class="col-sm">
 <ul>
-  <li>luthería</li>
-<li>para hobbystas y expertos</li>
-<li>diy electric guitar circuits</li>
+  <li>media arts graduate</li>
+<li>used to teach electronic music at u. de chile</li>
+	<li>i have a soloist  project named  <a href="https://soundcloud.com/thehumancannonball">t h c</a></li>
 
 
 </ul>
@@ -76,18 +76,18 @@
 
     <div class="col-sm">
         <ul>
-<li>reparación de fretboard y nut</li>
-<li>calibraciones a piacere</li>
- <li>reentrastados</li>
+<li>different sorts web projects</li>
+<li>digital video editing and magic stuff</li>
+ <li>into old school web programming</li>
 </ul>
 
 
     </div>
     <div class="col-sm">
         <ul>
- <li>diseño personalizado de pickguard</li>
-<li>recableado de cápsulas</li>
-<li>construcción de preamps</li>
+ <li>guitar technician</li>
+<li>native spanish speaker, from chile</li>
+<li>also into writing and photography</li>
 </ul>
 
 
@@ -123,10 +123,11 @@
 <div class="d-inline-flex p-2">
  
 
-  fundada en La Florida circa 1999
+ if you need to start a multimedia project
 
 
-donde me dedico a restaurar y reparar guitarras de low-end cost para gente de esfuerzo
+or begin a brainstorming campaing that won't work
+	
 
 
 </div>
@@ -134,7 +135,7 @@ donde me dedico a restaurar y reparar guitarras de low-end cost para gente de es
 
 
 
-<div class="d-inline-flex p-2"><a href="mailto:obama@whitehouse.com"> say hi to the llama</a>
+<div class="d-inline-flex p-2"><a href="mailto:balondegashumano@gmail.com"> say hi to the llama</a>
 
    
 
