--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
 
  <header>
- <div class="d-flex p-2"> <h3>I'm leo, from chile </h3></div>
+ <div class="d-flex p-2"> <h3>hi </h3></div>
   
   </header>
 
