--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
  
 
   <div class="container">
-  <img src="canvas.png" class="img-fluid" alt="Responsive image">
+  <img src="collage.png" class="img-fluid" alt="Responsive image">
 
    
 
