--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="col-sm">
         <ul>
-<li>different sorts web projects</li>
+<li>different sorts of projects</li>
 <li>digital video editing and magic stuff</li>
  <li>into old school web programming</li>
 </ul>
@@ -126,7 +126,7 @@
  if you need to start a multimedia project
 
 
-or begin a brainstorming campaing that won't work
+or begin a brainstorming campaign that won't work
 	
 
 
