--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>Devman's World </title>
+	<title>hi </title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
@@ -55,7 +55,7 @@
  
 
   <div class="container">
-  <img src="collage.png" class="img-fluid" alt="Responsive image">
+  <img src="guanaco.jpg" class="img-fluid" alt="Responsive image">
 
    
 
@@ -65,9 +65,9 @@
   <div class="row">
     <div class="col-sm">
 <ul>
-  <li>media arts graduate</li>
-<li>used to teach electronic music at u. de chile</li>
-	<li>i have a soloist  project named  <a href="https://soundcloud.com/thehumancannonball">t h c</a></li>
+  <li>programmer and</li>
+<li>software expert</li>
+	<li>also musician at  <a href="https://soundcloud.com/thehumancannonball">thehumancannonball</a></li>
 
 
 </ul>
@@ -76,18 +76,18 @@
 
     <div class="col-sm">
         <ul>
-<li>different sorts of projects</li>
-<li>digital video editing and magic stuff</li>
- <li>into old school web programming</li>
+<li>java EE</li>
+<li>php cms (wordpress, prestashop, drupal)</li>
+ <li>vbscript and c#</li>
 </ul>
 
 
     </div>
     <div class="col-sm">
         <ul>
- <li>guitar technician</li>
-<li>native spanish speaker, from chile</li>
-<li>also into writing and photography</li>
+ <li>c++</li>
+<li>webGL and 3d libraries</li>
+<li>css3, bootstrap, vue.js</li>
 </ul>
 
 
@@ -122,12 +122,7 @@
 
 <div class="d-inline-flex p-2">
  
-
- if you need to start a multimedia project
-
-
-or begin a brainstorming campaign that won't work
-	
+advanced english speaker, native from santiago, chile
 
 
 </div>
