--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
   <div class="row">
     <div class="col-sm">
 <ul>
-  <li>programmer and</li>
-<li>software expert</li>
-	<li>also musician at  <a href="https://soundcloud.com/thehumancannonball">thehumancannonball</a></li>
+  <li>programador </li>
+<li></li>
+	<li>   <a href="https://www.behance.net/audifonowebdesign/projects">audifono web design</a></li>
 
 
 </ul>
@@ -76,18 +76,18 @@
 
     <div class="col-sm">
         <ul>
-<li>java EE</li>
-<li>php cms (wordpress, prestashop, drupal)</li>
- <li>vbscript and c#</li>
+<li> magazine</li>
+<li>  ecommerce</li>
+ <li> gcloud admin</li>
 </ul>
 
 
     </div>
     <div class="col-sm">
         <ul>
- <li>c++</li>
-<li>webGL and 3d libraries</li>
-<li>css3, bootstrap, vue.js</li>
+ <li>infrastructure</li>
+<li>hardware projects</li>
+<li>backend api testing</li>
 </ul>
 
 
@@ -122,20 +122,15 @@
 
 <div class="d-inline-flex p-2">
  
-advanced english speaker, native from santiago, chile
+from scl 
 
 
 </div>
 
 
-
-
-<div class="d-inline-flex p-2"><a href="mailto:balondegashumano@gmail.com"> say hi to the llama</a>
+<div class="d-inline-flex p-2"><a href="mailto:sakayama666@icloud.com"> say hi to the llama</a>
 
    
-
-
-
 </div>
 
 
