--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <div class="row">
     <div class="col-sm">
 <ul>
-  <li>programador </li>
+  <li> programador </li>
 <li></li>
 	<li>   <a href="https://www.behance.net/audifonowebdesign/projects">audifono web design</a></li>
 
@@ -78,14 +78,14 @@
         <ul>
 <li> magazine</li>
 <li>  ecommerce</li>
- <li> gcloud admin</li>
+ <li> g-admin</li>
 </ul>
 
 
     </div>
     <div class="col-sm">
         <ul>
- <li>infrastructure</li>
+ <li>infrastructura</li>
 <li>hardware projects</li>
 <li>backend api testing</li>
 </ul>
