--- a/index.html
+++ b/index.html
@@ -1,150 +1,163 @@
-
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>hi </title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-
-<!-- -->  
-
-<!-- -->
-
-<!-- 
-
-
- <link rel="stylesheet"
-        type="text/css"
-        href="index_print.css">
-
-
-        -->
-
-<link rel="stylesheet" type="text/css" href="style.css">
-
-
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My GitHub Page</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&callback=initMap" async defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <style>
+        body {
+            display: flex;
+            min-height: 100vh;
+            font-family: 'Roboto', sans-serif;
+            background-color: #fff5e6;
+            color: #333;
+        }
+        .sidebar {
+            width: 250px;
+            background: #ff9800;
+            color: white;
+            padding: 20px;
+        }
+        .content {
+            flex-grow: 1;
+            padding: 20px;
+        }
+        .canvas-container {
+            text-align: center;
+        }
+        #map {
+            height: 300px;
+            width: 100%;
+            margin-top: 20px;
+            border-radius: 10px;
+        }
+        .dark-mode {
+            background-color: black !important;
+            color: white !important;
+        }
+        .gothic-mode {
+            font-family: 'Old English Text MT', cursive;
+            background-color: black !important;
+            color: white !important;
+        }
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .gallery img {
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+    </style>
 </head>
-
 <body>
-
- <header>
- <div class="d-flex p-2"> <h3>hi </h3></div>
-  
-  </header>
-
-
-
-
-<div id="principal">
- 
- 
-
-  <div class="container">
-  <img src="guanaco.jpg" class="img-fluid" alt="Responsive image">
-
-   
-
-
-
-  <div class="d-flex p-2"> <h3>what I do</h3></div>
-  <div class="row">
-    <div class="col-sm">
-<ul>
-  <li> programador </li>
-<li></li>
-	<li>   <a href="https://www.behance.net/audifonowebdesign/projects">audifono web design</a></li>
-
-
-</ul>
+    <div class="sidebar">
+        <h2>My Projects</h2>
+        <ul class="nav flex-column">
+            <li class="nav-item"><a href="#python" class="nav-link text-light">Python</a></li>
+            <li class="nav-item"><a href="#javascript" class="nav-link text-light">JavaScript</a></li>
+            <li class="nav-item"><a href="#java" class="nav-link text-light">Java</a></li>
+            <li class="nav-item"><a href="#web" class="nav-link text-light">Web Projects</a></li>
+            <li class="nav-item"><a href="#gallery" class="nav-link text-light">Nerd Image Gallery</a></li>
+            <li class="nav-item"><a href="#video" class="nav-link text-light">Video Page</a></li>
+            <li class="nav-item"><a href="#diary" class="nav-link text-light">Diary</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link text-light">Contact</a></li>
+        </ul>
+        <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+        <button onclick="toggleGothicMode()">Gothic Mode</button>
     </div>
- 
-
-    <div class="col-sm">
-        <ul>
-<li> magazine</li>
-<li>  ecommerce</li>
- <li> g-admin</li>
-</ul>
-
-
+    <div class="content">
+        <h1>Welcome to My GitHub Page</h1>
+        <div class="canvas-container">
+            <div id="p5-canvas"></div>
+        </div>
+        <div id="map"></div>
+        <h2>Image Gallery</h2>
+        <div class="gallery" id="imageGallery"></div>
     </div>
-    <div class="col-sm">
-        <ul>
- <li>infrastructura</li>
-<li>hardware projects</li>
-<li>backend api testing</li>
-</ul>
-
-
-
-
-    </div>
-
-
-
-  </div>
-</div>
-
-    
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<footer>
-
-<div class="d-inline-flex p-2">
- 
-from scl 
-
-
-</div>
-
-
-<div class="d-inline-flex p-2"><a href="mailto:sakayama666@icloud.com"> say hi to the llama</a>
-
-   
-</div>
-
-
-
-</footer>
-
-
+    <script>
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+        }
+        function toggleGothicMode() {
+            document.body.classList.toggle('gothic-mode');
+        }
+        let fishSprites = [];
+        let fishObjects = [];
+        let bgSprites = [];
+        function preload() {
+            for (let i = 18; i <= 117; i += 2) {
+                fishSprites.push([loadImage(`assets/IMG_0${i}.png`), loadImage(`assets/IMG_0${i+1}.png`)]);
+            }
+            for (let i = 11; i <= 17; i++) {
+                bgSprites.push(loadImage(`assets/IMG_00${i}.png`));
+            }
+        }
+        function setup() {
+            let canvas = createCanvas(windowWidth, windowHeight);
+            canvas.parent('p5-canvas');
+            for (let i = 0; i < fishSprites.length; i++) {
+                fishObjects.push({
+                    x: random(width),
+                    y: random(height),
+                    speed: random(1, 3),
+                    size: random(50, 150),
+                    frame: 0
+                });
+            }
+        }
+        function draw() {
+            let bg = random(bgSprites);
+            background(bg);
+            for (let i = 0; i < fishObjects.length; i++) {
+                let fish = fishObjects[i];
+                let sprite = fishSprites[i % fishSprites.length][fish.frame];
+                image(sprite, fish.x, fish.y, fish.size, fish.size);
+                fish.x += fish.speed;
+                if (fish.x > width) {
+                    fish.x = -fish.size;
+                    fish.y = random(height);
+                    fish.size = random(50, 150);
+                }
+                fish.frame = (frameCount % 20 < 10) ? 0 : 1;
+            }
+        }
+        function initMap() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(position => {
+                    const userLocation = { lat: position.coords.latitude, lng: position.coords.longitude };
+                    const map = new google.maps.Map(document.getElementById("map"), {
+                        zoom: 12,
+                        center: userLocation,
+                    });
+                    new google.maps.Marker({
+                        position: userLocation,
+                        map: map,
+                        title: "You are here!"
+                    });
+                });
+            } else {
+                document.getElementById("map").innerHTML = "Geolocation is not supported by your browser.";
+            }
+        }
+        document.addEventListener("DOMContentLoaded", () => {
+            const gallery = document.getElementById("imageGallery");
+            for (let i = 11; i <= 17; i++) {
+                let img = document.createElement("img");
+                img.src = `assets/IMG_00${i}.png`;
+                img.alt = `Image ${i}`;
+                gallery.appendChild(img);
+            }
+        });
+    </script>
 </body>
-
-
-
-
-
-
 </html>
-
 
